[package]
name = "hobbs-os"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hobbs-os"
path = "src/main.rs"

[lib]
name = "syslib"
path = "src/lib.rs"

[dependencies]

[lints.rust]
missing_docs = "deny"